[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Donaldo Osornio <donaldo.osornio@joylabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md-5 = "0.10.0"
fancy-regex = "0.7.1"
itertools = "0.10.3"